@@ -2,19 +2,16 @@
 
 line-graphing.name=Line Graphing
 
-axis.+x=+x
-axis.-x=-x
-axis.+y=+y
-axis.-y=-y
-
-equation.y\=mx+b=y = mx + b
-equation.x\=my+b=x = my + b
-equation.y\=+x=y = (+1)x
-equation.y\=-x=y = (-1)x
-
-eraseLine=Erase Line
+eraseLines=Erase Lines
 saveLine=Save Line
 show=Show
 
+symbol.horizontalAxis=x
+symbol.verticalAxis=y
+symbol.slope=m
+symbol.intercept=b
+
 tab.intro=Intro
 tab.game=Line Game
+
+pattern.0sign.1axis={0}{1}
