@@ -1,6 +1,8 @@
 // Copyright 2002-2012, University of Colorado
 package edu.colorado.phet.linegraphing;
 
+import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
+
 /**
  * Constants used through this sim.
  *
@@ -9,4 +11,5 @@ package edu.colorado.phet.linegraphing;
 public class LGConstants {
 
     public static final int CONTROL_FONT_SIZE = 18;
+    public static final PhetFont CONTROL_FONT = new PhetFont( CONTROL_FONT_SIZE );
 }
